--- a/src/pages/navbar.scss
+++ b/src/pages/navbar.scss
@@ -70,7 +70,7 @@
     h2 {
         color: #BBBBBB;
         font-family: "Poppins";
-        font-size: var(--h2Size);
+        font-size: 1rem;
         font-weight: 300;
         user-select: none;
     }
