--- a/src/pages/components.scss
+++ b/src/pages/components.scss
@@ -50,10 +50,11 @@
     gap: 1rem;
     justify-content: center;
     align-items: center;
+    padding-top: 2rem;
 
     div {
-        height: 10px;
-        width: 100px;
+        height: 5px;
+        width: 50px;
         border-radius: 10px;
         background-color: white;
         cursor: pointer;
@@ -73,7 +74,7 @@
 
     display: flex;
     flex-direction: column;
-    gap: 3rem;
+    gap: 1rem;
     position: relative;
 
     & > div:first-of-type {
@@ -135,7 +136,7 @@
         display: flex;
         flex-direction: column;
         input[type="text"] {
-            font-size: 3rem;
+            font-size: 2.5rem;
             border: none;
             width: 20ch;
             color: rgb(99, 99, 99);
@@ -145,18 +146,17 @@
         }
 
         input:nth-child(2) {
-            font-size: 2rem;
+            font-size: 1.5rem;
         }
     }
 
     div.info {
-        & > div:last-child { padding-top: 3rem; }
+        & > div:last-child { padding-top: 1rem; }
 
         // Toggle
         div:first-child {
             display: flex;
             flex-direction: row;
-            // gap: 1rem;
 
             h4:not(:first-child)::before {
                 content: "-";
@@ -168,6 +168,7 @@
                 transition: color .2s ease-in-out; 
                 cursor: pointer;
                 user-select: none;
+                font-size: .75rem;
             }
             
             h4:not(.on) {
@@ -182,13 +183,13 @@
                 display: inline-flex;
                 flex-direction: row;
                 gap: 1rem;
-                padding: 1rem;
+                padding: .75rem;
                 border-radius: .5rem;
-                margin-right: 2rem;
+                margin-right: 1rem;
                 margin-bottom: 1rem;
 
                 h3 {
-                    font-size: 1rem;
+                    font-size: .75rem;
                     font-weight: 500;
 
                     &:not(:first-child) {
@@ -202,7 +203,6 @@
     }
 
     div.graph {
-        flex: 1;
 
         display: flex;
         align-items: center;
@@ -237,12 +237,12 @@
         }
 
         h3 {
-            font-size: 2rem;
+            font-size: 1.5rem;
             font-weight: 300;
             // font-style: italic;
 
             a {
-                font-size: 1rem;
+                font-size: .75rem;
             }
         }
 
@@ -257,6 +257,7 @@
             transition: color .2s ease-in-out; 
             cursor: pointer;
             user-select: none;
+            font-size: .75rem;
         }
         
         h4:not(.on) {
