--- a/src/pages/notifications.scss
+++ b/src/pages/notifications.scss
@@ -9,7 +9,7 @@
     color: var(--primaryColor);
 
     h3 { 
-        font-size: 1.5rem;
+        font-size: 1rem;
         font-weight: 500;
     }
 }
@@ -44,7 +44,7 @@
     gap: 2rem;
 
     span {
-        padding: 1rem 0;
+        padding: .25rem 0;
     }
 
     button {
@@ -107,7 +107,7 @@
                 align-items: center;
                 justify-content: space-between;
 
-                h3 { font-size: 1.2rem; }
+                h3 { font-size: .75rem; }
 
                 & > div:nth-child(1) {
                     border-radius: 50%;
@@ -142,7 +142,7 @@
                     gap: 1rem;
                     align-items: center;
 
-                    h3 { font-size: 1rem; }
+                    h3 { font-size: .75rem; }
                 }
 
                 svg {
