--- a/src/pages/dashboard.scss
+++ b/src/pages/dashboard.scss
@@ -50,7 +50,7 @@
 
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 0.5fr 0.6fr 1fr 0.7fr;
+    grid-template-rows: 0.4fr 0.6fr 1fr 0.5fr;
     gap: var(--gridGap);
 
     .div1 { grid-area: 1 / 1 / 2 / 2; }
@@ -152,14 +152,14 @@
                     cursor: pointer; 
                 }
 
-                h2.selected { font-weight: 400; }
+                h2.selected { font-weight: 600; }
 
                 h2:first-of-type {
-                    border-right: 3px black solid;
+                    border-right: 2px black solid;
                     padding-right: 1rem;
                 }
                 h2:last-of-type {
-                    padding-left: 1rem;
+                    margin-left: 1rem;
                 }
             }
         }
@@ -203,6 +203,7 @@
 
         div.usage-row {
             padding: 0 !important;
+            * { font-size: .8rem !important; }
         }
     }
 
@@ -217,27 +218,26 @@
                 height: 80%;
             }
             
-
-            * {margin: 0;}
-
-            & > div:nth-child(1) > h1 { background-color: grey; }
-            & > div:nth-child(2) > h1 { background-color: #f59e0b; }
-            & > div:nth-child(3) > h1 { background-color: #dc2626; }
+            & > div.Normal > h1 { background-color: grey; }
+            & > div.Warning > h1 { background-color: #f59e0b; }
+            & > div.Critical > h1 { background-color: #dc2626; }
 
             
             h1 {
                 border-radius: 1rem;
-                padding: 1rem;
+                padding: 0.5rem;
                 height: 2rem;
                 width: 2rem;
+                line-height: 1.25;
                 text-align: center;
                 color: white !important;
             }
 
             
             h4 {
-                margin-top: 1rem;
+                margin-top: .75rem;
                 text-align: center;
+                font-size: .75rem;
             }
         }
     }
